@@ -1,72 +1,72 @@
 ISAAC: Informatics Analytic Architecture
 ======================
-
-[![Build Status](https://travis-ci.org/OSEHRA/ISAAC.svg?branch=develop)](https://travis-ci.org/OSEHRA/ISAAC)
+[![Knowledge%20Snapshot%20Build Actions Status](https://github.com/logicahealth/komet/workflows/Knowledge%20Snapshot%20Build/badge.svg)](https://github.com/logicahealth/komet/actions)
 
 A dynamic semantic architecture for the analysis of models, logic, and language.
 
 
-## FAQ
+## Environment
 
-1) If you are running the build for the first time and it's broken with the following error:
+* Java 11 (Oracle or OpenJDK) (Java 8 support deprecated, and on another branch of the source code)
+* Maven  3.5 or newer
 
-[ERROR] /Users/patrick/s/osehra/ISAAC/core/api/src/main/java/sh/isaac/api/util/HeadlessToolkit.java:[101,33] cannot find symbol
-[ERROR]   symbol:   class HitInfo
+## JDK 11 notes
+Launch the GUI using sh.komet.fx.stage.Komet, rather than MainApp, to avoid all sorts of JavaFX problems with modular java.
 
-Make sure java is at the latest 1.8.x version.  Also, make sure maven is using the same jdk.  If you are using jenv to have multiple java versions on your machine... be aware jenv does not set the output of /usr/libexec/java correctly.
 
-Example:
+## Linux Issues
+To allow the debugger to work properly when debugging an FX GUI app, you likely will need to disable screengrab.
 
-# jenv versions
-  system
-  1.8
-* 1.8.0.92 (set by /Users/patrick/.jenv/version)
-  9-ea
-  oracle64-1.8.0.92
-  oracle64-9-ea
+```
+-Dsun.awt.disablegrab=true
+```
 
-# java -version
-java version "1.8.0_92"
-Java(TM) SE Runtime Environment (build 1.8.0_92-b14)
-Java HotSpot(TM) 64-Bit Server VM (build 25.92-b14, mixed mode)
+## KOMET notes
+To enable the GUI to load content directly from your Maven repository, set the parameter as appropriate:
 
-# mvn -version
-Apache Maven 3.5.0 (ff8f5e7444045639af65f6095c62210b5713f426; 2017-04-03T13:39:06-06:00)
-Maven home: /usr/local/Cellar/maven/3.5.0/libexec
-Java version: 9-ea, vendor: Oracle Corporation
-Java home: /Library/Java/JavaVirtualMachines/jdk-9.jdk/Contents/Home
-Default locale: en_US, platform encoding: UTF-8
-OS name: "mac os x", version: "10.12.6", arch: "x86_64", family: "mac"
+```
+ -DM2_PATH=/mnt/STORAGE/Work/Maven/repository/
+```
+## developer flags...
+```
+-DSHOW_BETA_FEATURES=true 
+-DISAAC_DEBUG=true
+```
 
-# jenv exec mvn -version
-Apache Maven 3.5.0 (ff8f5e7444045639af65f6095c62210b5713f426; 2017-04-03T13:39:06-06:00)
-Maven home: /usr/local/Cellar/maven/3.5.0/libexec
-Java version: 1.8.0_92, vendor: Oracle Corporation
-Java home: /Library/Java/JavaVirtualMachines/jdk1.8.0_92.jdk/Contents/Home/jre
-Default locale: en_US, platform encoding: UTF-8
-OS name: "mac os x", version: "10.12.6", arch: "x86_64", family: "mac"
-
+## Apple Issues
 
 Use "jenv exec mvn clean install" to get maven using the correct jdk.
 
-The first time I attempted to build this app these were the problems I had and creating the proper settings.xml file and running "jenv exec mvn clean install" fixed the problem.
+## IntelliJ issues
 
-2) IntelliJ memory issues.
-
-https://stackoverflow.com/questions/13578062/how-to-increase-ide-memory-limit-in-intellij-idea-on-mac#13581526
+* IntelliJ memory issues - https://stackoverflow.com/questions/13578062/how-to-increase-ide-memory-limit-in-intellij-idea-on-mac#13581526
 
 Be aware... newer versions of IntelliJ "should" make this a non issue as is indicated in the last post in that file:
 
 It looks like IDEA solves this for you (like everything else). When loading a large project and letting it thrash, it will open a dialog to up the memory settings. Entering 2048 for Xmx and clicking "Shutdown", then restarting IDEA makes IDEA start up with more memory. This seems to work well for Mac OS, though it never seems to persist for me on Windows (not sure about IDEA 12).
 
+## Gitflow
+This project uses GitFlow: https://nvie.com/posts/a-successful-git-branching-model/
+There are tools in the maven package to make branching easier **IF** you want the version number in all of the poms changed to match to the 
+feature branch name.  If you do NOT want to change the poms when you make a feature branch, you should probably use another mechanism to branch.
 
+## Creating a feature branch
+```
+mvn gitflow:feature-start
+```
+You will be prompted for the feature name:
+```
+What is a name of feature branch? feature/: F2
+```
+## Finishing a feature branch
+```
+mvn gitflow:feature-finish
+```
 
 
 ## Deploying to a repository
-To deploy, set a profile in your settings.xml with the repository you want to deploy to, 
-patterned after these entries:
 
-
+* Option 1: To deploy, set a profile in your settings.xml with the repository you want to deploy to, patterned after these entries:
 
 ```
   <profile>
@@ -85,12 +85,15 @@ patterned after these entries:
 
 ```
 
-Or, alternatively, just use the parameter: 
+* Option 2: just use the parameter:
+
 ```
 -DaltDeploymentRepository=central::default::http://artifactory.isaac.sh/artifactory/libs-snapshot-local
 
 ```
-Note, in either case, the value 'central' is a variable that needs to align with a 'server' section in your settings.xml file.
+
+**Note, in either case, the value 'central' is a variable that needs to align with a 'server' section in your settings.xml file.**
+
 ```
   <server>
     <id>central</id>
@@ -101,54 +104,46 @@ Note, in either case, the value 'central' is a variable that needs to align with
 
 Then you can deploy to the repository of your choice using the following command:  
 
+```
 mvn clean deploy -Psnapshot-deploy
+```
 
 ## Bitbucket Pipelines 
-There is a Bitbucket pipelines configuration provided, which builds the source on openjdk8.  It also provides a custom deploy step you can run.
+There is a Bitbucket pipelines configuration provided, which builds the source on openjdk11.  It also provides a custom deploy step you can run.
 Before running the custom (snapshot) deploy step in bitbucket, you need to set the following three variables in your bitbucket pipelines configuration:
 ```
 DEPLOYMENT_SNAPSHOT_REPO
 REPO_USERNAME
 REPO_PASSWORD
 ```
+#GitFlow Implementation
+We use the Git-Flow Maven plugin hosted on GitHub by Aleksandr Mashchenko
+
+https://github.com/aleksandr-m/gitflow-maven-plugin
+
+## Travis
+Travis is already configured for this repository.  See the .travis.yml file for how to configure it, if you are forking and want to use travis on your own 
+server.
+
+## Jenkins
+The provided Jenkinsfile runs this as a jenkins pipeline.  See comments in the Jenkinsfile for details on what plugins need to be installed on your Jenkins server
+to build this code.
 
 ## Performing a release
-
 Make sure that offline is set to false in your settings.xml file. 
+
 ```
-$ mvn gitflow:release-start gitflow:release-finish \
-         -DreleaseVersion=4.64 -DdevelopmentVersion=4.65-SNAPSHOT \
+$ mvn gitflow:release-start gitflow:release-finish\
+         -DreleaseVersion=4.64 -DdevelopmentVersion=4.65-SNAPSHOT\
          -DpostReleaseGoals="clean deploy"
 
 $ mvn gitflow:release -Prelease
 ```
-## Creating a feature branch
-```
-mvn gitflow:feature-start
-```
-You will be prompted for the feature name:
-```
-What is a name of feature branch? feature/: F2
-```
-## Finishing a feature branch
-```
-mvn gitflow:feature-finish
-```
-## JDK 11 notes
-Crazy command to launch in eclipse:
-Also had to add javafx controls, base, and graphics as "modules" in the run configuration.
-Someday... will figure out if its even possible to properly integrate this information into the maven build, so Eclipse finds it...
 
-```
--DSHOW_BETA_FEATURES=true --add-modules=javafx.controls --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.util=ALL-UNNAMED --add-exports javafx.base/com.sun.javafx.reflect=ALL-UNNAMED --add-exports javafx.base/com.sun.javafx.beans=ALL-UNNAMED --add-exports javafx.base/com.sun.javafx.runtime=ALL-UNNAMED --add-exports javafx.base/com.sun.javafx.collections=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED --add-exports javafx.base/com.sun.javafx.binding=ALL-UNNAMED --add-exports javafx.base/com.sun.javafx.logging=ALL-UNNAMED --add-exports javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED --add-opens javafx.graphics/javafx.concurrent=ALL-UNNAMED
-```
+## Other tips
 
-Useful on linux, and with repo content
-
-```
--Dsun.awt.disablegrab=true -DM2_PATH=/mnt/STORAGE/Work/VetsEZ/Maven/repository/
-```
 To turn off messages such as the following from JAXB:
+
 ```
 WARNING: An illegal reflective access operation has occurred
 WARNING: Illegal reflective access by com.sun.xml.bind.v2.runtime.reflect.opt.Injector (file:/home/tra/.m2/repository/com/sun/xml/bind/jaxb-impl/2.3.0/jaxb-impl-2.3.0.jar) to method java.lang.ClassLoader.defineClass(java.lang.String,byte[],int,int)
@@ -156,7 +151,9 @@ WARNING: Please consider reporting this to the maintainers of com.sun.xml.bind.v
 WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
 WARNING: All illegal access operations will be denied in a future release
 ```
+
 Add the following flag to the java start  command
+
 ```
 --add-opens java.base/java.lang=ALL-UNNAMED
 ```
